k8s/site.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: site
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: site
    strategy: {}
    template:
      metadata:
        labels:
          deployment: site
      spec:
        containers:
        - image: ' '
          name: site
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          resources: {}
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: site
      app.kubernetes.io/component: site
      app.kubernetes.io/instance: site
    name: site
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      deployment: site
  status:
    loadBalancer: {}
kind: List
metadata: {}
