k8s/route.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  managedFields:
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
        f:spec:
        f:port:
          .: {}
          f:targetPort: {}
        f:to:
          f:kind: {}
          f:name: {}
          f:weight: {}
        f:wildcardPolicy: {}
    manager: kubectl-expose
    operation: Update

  name: site
  namespace: site
spec:
  host: site-site.apps-crc.testing
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: site
    weight: 100
  wildcardPolicy: None
status: {}
